# Pixel2Mesh

./: .gitmodules  config.py  entrypoint_eval.py  entrypoint_train.py  entrypoint_train_depth.py  options.py  run.sh
datasets/: base_dataset.py  dtu.py  shapenet.py  shapenet_depth.py
doTest/: camera_baselinecheck.py  check_gridsample.py  checkpoint_test.py  epipolar_line.py
experiments/default/: shapenet.yml  shapenet_depth.yml  tensorflow.yml
functions/: base.py  check_best.py  depth_evaluator.py  depth_trainer.py  evaluator.py  saver.py  trainer.py
models/: p2m.py
models/backbones/: __init__.py  costvolume.py  encoder8.py  vgg16.py
models/layers/: attention_feature_pooling.py  gbottleneck.py  gconv.py  gpooling.py  gprojection.py  gprojection_xyz.py  multihead_attention_feature_pooling.py  sample_points.py
models/losses/: p2m.py
tests/: rendered_depth_verify.py
utils/: all_resizeImg_ply2dat.py  args_utils.py  compare_results.py  dat_to_ply.py  depth_backprojection.py  dtu_image_resize.py  dtu_mesh_reconstruct.py  gt_mesh_convert.py  make_auxiliary_dat_file.py  mesh.py  misc.py  mitsuba_template.xml  ply_to_dat.py  render_blender.py  render_mitsuba.py  render_mitsuba_requirements.txt  transform_ellipsoid.py  verify_shapenet_dataset.py  xyz_to_obj.py  xyz_to_obj_all.py
utils/depth_renderer/: CMakeLists.txt  installation.txt
utils/depth_renderer/cmake_modules/: FindGLM.cmake
utils/depth_renderer/include/p2mpp_depth_renderer/: gl_context.h  mesh.h  offscreen_rendering.h
utils/depth_renderer/src/: gl_context.cpp  main.cpp  mesh.cpp  offscreen_rendering.cpp
utils/mesh_decimation/: README.md
utils/renderdepth_qingkun/: main.cpp  params.txt  renderdepth.pro
utils/view_selection/: maximum_fov_select.py  smallest_baseline_select.py
(+15 files in other folders)
